# url_shortcutter

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
shortcutter/: admin.py  exceptions.py  models.py  schemas.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
shortcutter/migrations/: 0001_initial.py  0002_alter_shorturlmodel_options_and_more.py  0003_rename_short_url_shorturlmodel_short_code_and_more.py  0004_remove_clickmodel_ip_address_and_more.py  0005_shorturlmodel_author_alter_shorturlmodel_short_code_and_more.py
shortcutter/tests/: pytest.ini  tests.py
url_shortcutter/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
users/: authentication.py  models.py  schemas.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
